@@ -1,27 +1,25 @@
 package cn.tuyucheng.taketoday.doublecolon;
 
 import cn.tuyucheng.taketoday.doublecolon.function.TriFunction;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
+import org.junit.After;
+import org.junit.Assert;
+import org.junit.Before;
+import org.junit.Test;
 
 import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
 import java.util.function.BiFunction;
 
-import static cn.tuyucheng.taketoday.doublecolon.ComputerUtils.after2010Predicate;
-import static cn.tuyucheng.taketoday.doublecolon.ComputerUtils.blackPredicate;
-import static cn.tuyucheng.taketoday.doublecolon.ComputerUtils.filter;
+import static cn.tuyucheng.taketoday.doublecolon.ComputerUtils.*;
 
 public class ComputerUtilsUnitTest {
 
-   @BeforeEach
+   @Before
    public void setup() {
    }
 
-   @AfterEach
+   @After
    public void tearDown() {
    }
 
@@ -42,17 +40,17 @@ public class ComputerUtilsUnitTest {
       List<Computer> inventory = Arrays.asList(c1, c2, c3, c4, c5, c6);
 
       List<Computer> blackComputer = filter(inventory, blackPredicate);
-      Assertions.assertEquals("The black Computers are: ", blackComputer.size(), 4);
+      Assert.assertEquals("The black Computers are: ", blackComputer.size(), 4);
 
       List<Computer> after2010Computer = filter(inventory, after2010Predicate);
-      Assertions.assertEquals("The Computer bought after 2010 are: ", after2010Computer.size(), 3);
+      Assert.assertEquals("The Computer bought after 2010 are: ", after2010Computer.size(), 3);
 
       List<Computer> before2011Computer = filter(inventory, c -> c.getAge() < 2011);
-      Assertions.assertEquals("The Computer bought before 2011 are: ", before2011Computer.size(), 3);
+      Assert.assertEquals("The Computer bought before 2011 are: ", before2011Computer.size(), 3);
 
       inventory.sort(Comparator.comparing(Computer::getAge));
 
-      Assertions.assertEquals("Oldest Computer in inventory", c6, inventory.get(0));
+      Assert.assertEquals("Oldest Computer in inventory", c6, inventory.get(0));
 
    }
 
@@ -67,7 +65,7 @@ public class ComputerUtilsUnitTest {
       List<Computer> inventory = Arrays.asList(c1, c2, c3);
       inventory.forEach(ComputerUtils::repair);
 
-      Assertions.assertEquals("Computer repaired", new Integer(100), c1.getHealty());
+      Assert.assertEquals("Computer repaired", Integer.valueOf(100), c1.getHealty());
    }
 
    @Test
@@ -87,7 +85,7 @@ public class ComputerUtilsUnitTest {
       final MacbookPro macbookPro = integerStringIntegerObjectTriFunction.apply(2010, "black", 100);
       Double initialValue = 999.99;
       final Double actualValue = macbookPro.calculateValue(initialValue);
-      Assertions.assertEquals(766.659, actualValue, 0.0);
+      Assert.assertEquals(766.659, actualValue, 0.0);
    }
 
 }
